--- a/patron-config/README
+++ b/patron-config/README
@@ -2,12 +2,14 @@
 # 1. Copy "./rootdir/usr/bin/patron-api" file to "/usr/bin/patron-api"
 cd patron-config
 cp ./rootdir/usr/bin/patron-api /usr/bin/patron-api
+# the same thing should be done to patron-verify service.
 
 # 2. Copy "./rootdir/etc/init.d/patron-api" file to "/etc/init.d/patron-api"
 cd patron-config
 cp ./rootdir/etc/init.d/patron-api /etc/init.d/patron-api
 cd /etc/init.d
 sudo update-rc.d patron-api defaults 95
+# the same thing should be done to patron-verify service.
 
 # 3. Copy "./rootdir/etc/patron/" folder to "/etc/patron/"
 cd patron-config
